kustomize-units/crossplane-init/components/crossplane-monitoring/crossplane-allow-scraping.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-scraping
  namespace: crossplane-system
spec:
  podSelector:
    matchLabels:
      app: crossplane
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cattle-monitoring-system
      ports:
        - port: 8080
          protocol: TCP
